# Website

./: .gitattributes  .gitignore  README.md  meson.build  net.codelogistics.webapps.json  new-post.sh  package.json  webapps.doap
.github/workflows/: build.yaml
.zed/: settings.json
data/: meson.build  net.codelogistics.webapps.appdata.xml.in  net.codelogistics.webapps.desktop.in  net.codelogistics.webapps.gschema.xml
data/icons/: meson.build
po/: LINGUAS  POTFILES  de.po  hi.po  it.po  meson.build  ru.po  uk.po  webapps.pot
src/: create_desktop_file.py  create_web_app_dialog.py  edit_web_app_dialog.py  edit_webapp_window.py  exceptions.txt  feed.njk  home.md  htaccess.njk  main.py  manifest_html_parser.py  meson.build  new_webapp_window.py  parse_manifest.py  parse_webpage.py  robots.njk  tags.njk  url_dialog.py  web_app_properties.py  web_app_window.py  webapps.gresource.xml  webapps.in  window.py
src/_data/: bad_crawlers.json  crawlers.json  social.json
src/_includes/: default.njk  post.njk
src/assets/css/: blog.css
src/blog/: change-mariadb-default-data-directory.md  fail2ban-with-an-external-firewall.md  how-to-configure-automatic-updates-on-fedora-with-email-reports.md  multiple-push-urls-single-git-remote.md
